<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

<Button
	android:id="@+id/btn_back_to_list"
	android:text="@string/app_back_to_list"
	android:layout_gravity="left"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	/>

<TextView
	android:id="@+id/staff_name"
	android:text="@string/app_staff_name"
	android:layout_weight="0.5"
	android:layout_gravity="left"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	/>

<TextView
	android:id="@+id/staff_email"
	android:text="@string/app_staff_email"
	android:layout_weight="0.5"
	android:layout_gravity="left"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	/>

<TextView
	android:id="@+id/staff_position"
	android:text="@string/app_staff_position"
	android:layout_weight="0.5"
	android:layout_gravity="left"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	/>

<TextView
	android:id="@+id/staff_mobile"
	android:text="@string/app_staff_mobile"
	android:layout_weight="0.5"
	android:layout_gravity="left"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	/>

<TextView
	android:id="@+id/staff_skype"
	android:text="@string/app_staff_skype"
	android:layout_weight="0.5"
	android:layout_gravity="left"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	/>
	
<ImageView
	android:id="@+id/staff_img"
	android:layout_gravity="right"
	android:layout_width="100px"
	android:layout_height="100px"
	android:scaleType="centerCrop"
	/>
	
</LinearLayout>